--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,20 +1,23 @@
+---
+
 env:
   browser: true
   es6: true
   node: true
+  jest: true
+
 extends:
   - 'plugin:react/recommended'
   - airbnb
-globals:
-  Atomics: readonly
-  SharedArrayBuffer: readonly
-parserOptions:
-  ecmaFeatures:
-    jsx: true
-  ecmaVersion: 2018
-  sourceType: module
-plugins:
-  - react
-  - babel
-rules: {}
+
+settings:
+  import/resolver:
+    - node
+    - webpack
+
+rules:
+  import/extensions: 0
+  react/prop-types: 0
+  no-console: 0
+
 parser: babel-eslint
