--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -11,20 +11,17 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [10.x]
+        node-version: [13.x]
 
     steps:
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@v2
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
-      - name: npm install, build
-        run: |
-          make install-actions
-          make build
-        env:
-          CI: true
+      - name: Install
+        run: make install
       - name: Run linter
-        run: |
-          make lint
+        run: make lint
+      - name: Run test
+        run: make test
