--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "slack",
   "version": "1.0.0",
   "description": "",
-  "main": "dist/bin/slack.js",
+  "main": "dist/index.js",
   "bin": {
     "slack": "dist/bin/slack.js"
   },
@@ -11,7 +11,7 @@
   },
   "scripts": {
     "test": "jest",
-    "build-server": "cross-env babel server --out-dir dist --source-maps inline && cp -r server/views dist/views",
+    "build-server": "babel server --out-dir dist --source-maps inline && cp -r server/views dist/views",
     "build-app": "npx webpack -p --env production",
     "build": "npm run build-app && npm run build-server",
     "start": "dist/bin/slack.js",
