--- a/package.json
+++ b/package.json
@@ -86,11 +86,14 @@
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.0",
     "react-dom": "^16.13.1",
+    "react-redux": "^7.2.0",
     "redux": "^4.0.5",
+    "redux-actions": "^2.6.5",
     "redux-bootstrap": "^1.3.0",
     "regenerator-runtime": "^0.13.5",
     "sass-loader": "^8.0.2",
     "socket.io": "^2.3.0",
+    "socket.io-client": "^2.3.0",
     "style-loader": "^1.1.3",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11",
