--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "core-js": "^3.6.5",
     "css-loader": "^3.5.2",
     "cssnano": "^4.1.10",
+    "date-fns": "^2.13.0",
     "debug": "^4.1.1",
     "dotenv": "^8.2.0",
     "faker": "^4.1.0",
