--- a/package.json
+++ b/package.json
@@ -23,10 +23,7 @@
   },
   "author": "Sergey89274291549",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Sergey89274291549/frontend-project-lvl4/issues"
-  },
-  "homepage": "https://github.com/Sergey89274291549/frontend-project-lvl4#readme",
+  "homepage": "https://github.com/SergeySuchkov",
   "devDependencies": {
     "@types/jest": "^25.2.1",
     "babel-eslint": "^10.1.0",
@@ -77,7 +74,7 @@
     "js-cookie": "^2.2.1",
     "lodash": "^4.17.15",
     "mini-css-extract-plugin": "^0.9.0",
-    "node-sass": "^4.13.1",
+    "node-sass": "^6.0.1",
     "point-of-view": "^3.8.0",
     "postcss-import": "^12.0.1",
     "postcss-loader": "^3.0.0",
@@ -92,7 +89,7 @@
     "redux-actions": "^2.6.5",
     "redux-bootstrap": "^1.3.0",
     "regenerator-runtime": "^0.13.5",
-    "sass-loader": "^8.0.2",
+    "sass-loader": "^10",
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.0",
     "style-loader": "^1.1.3",
